[project]
name = "streamlit-realtime-detection"
version = "0.1.0"
description = "Real-time object detection using YOLO and Streamlit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "streamlit-webrtc>=0.47.0",
    "opencv-python-headless>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "av>=10.0.0",
]
